test-cluster/01-namespaces-2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: small-apps
  labels:
    purpose: multi-cluster-test
